--- a/presentation.tex
+++ b/presentation.tex
@@ -85,13 +85,15 @@
   \begin{itemize}
     \item Ce cours décrit l'état de l'art des outils de maintien en condition
       de sécurité ainsi que les principes généraux et le workflow des standard
-      SCAP.
+      SCAP
     \item Dans le cadre de ce cours, les outils restent orientés pour les
       cibles GNU/Linux dans l'optique des travaux pratiques mais le sujet du
       maintien en condition de sécurité est global à l'ensemble d'une
       infrastructure (appliances propriétaires, postes bureautiques, etc.).
       Les principes derrière SCAP sont conçus pour supporter l'ensemble des
-      équipements logiciels ou appliances du marché.
+      équipements logiciels ou appliances du marché
+   \item L'état de l'art cible principalement l'écosystème open-source dans l'optique
+     de permettre aux étudiants de comparer
   \end{itemize}
 \end{frame}
 
@@ -131,18 +133,22 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame 2 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[t]
   \frametitle{Appliquer les bonnes pratiques de configuration}
-  \begin{block}{}
+  \begin{block}{Un sujet complexe...}
   \begin{itemize}
-    \item Historiquement pas toujours présentes, aujourd'hui de plus en plus
-      souvent fournies par les fournisseurs de logiciels
-    \item Peuvent nécessiter une refonte de l'usage des logiciels (utilisation
-      laxiste du compte administrateur, accès direct aux API internes sans
-      filtrage amont, etc.)
-    \item Initialement peu lisibles dans les guides de sécurité car de trop
-      haut niveau (e.g. NIST SP-800-53), les bonnes pratiques de configurations
-      sont apparues au fur et à mesure du temps avec les STIGs ou 
-      sous forme de CCE (Common Configuration Enumeration) et dans les divers
-      autres guides techniques (e.g. ANSSI DAT-NT-28, ANSSI DAT-NT-007 pour GNU/Linux)
+    \item De plus en plus souvent fournies par les fournisseurs de logiciels
+    \item Peuvent nécessiter une refonte de l'usage des logiciels
+      \begin{itemize}
+        \item utilisation laxiste du compte administrateur
+        \item accès direct aux API internes sans filtrage
+      \end{itemize}
+    \item guides de plus en plus nombreux et contextualisés (ANSSI, DISA, NIST..)
+    \item peut être fortement impactant sur l'architecture du SI
+    \item ne doit jamais être sous-estimé
+      \begin{itemize}
+        \item en coût financier, en temps
+        \item en impact humain
+      \end{itemize}
+    \item ne doit pas être oblitéré pour autant
   \end{itemize}
   \end{block}
   
@@ -157,20 +163,22 @@
   \frametitle{Définir une polique de sécurité d'un système d'information}
   \begin{block}{}
   \begin{itemize}
-    \item Cette politique, nommée PSSI, est sous la responsabilité du DSSI de
+    \item Nommée PSSI, est sous la responsabilité du DSSI de
       l'entreprise, et rédigée en comité avec des experts en sécurité des
       systèmes d'information
-    \item Cette politique n'est valable que si elle est applicable et
-      contrôlable dans le temps
-    \item Une PSSI peut contenir des éléments techniques (durcissement des
-      configurations par exemple) mais contient également souvent des éléments
-      organisationnels (gestion des accès aux salles machines, au bâtiments,
-      gestion des horaires d'accès au(x) site(s), etc.
-    \item Une PSSI dépend des moyens que la société accepte de mettre dans la
+    \item N'est valable que si elle est applicable et contrôlable
+    \item Se met à jour avec la vie du système d'information
+    \item Contient des éléments techniques et organisationnels
+      \begin{itemize}
+        \item choix des logiciels
+        \item durcissement des configurations
+        \item gestion des accès aux salles machines, au bâtiments
+      \end{itemize}
+    \item Dépend des moyens que la société accepte de mettre dans la
       sécurité de son système d'information (au sens large), mais aussi de la
-      réglementation en vigueur. En France, il existe plusieurs réglementation
+      réglementation en vigueur\footnote{En France, il existe plusieurs réglementations
       imposant un durcissement minimum à certains acteurs (typiquement les
-      OIV), comme la PSSIE [p. \ref{pssie}] ou la PPST [p. \ref{ppst}]
+      OIV), comme la PSSIE [p. \ref{pssie}] ou la PPST [p. \ref{ppst}]}
   \end{itemize}
   \end{block}
 \end{frame}
@@ -244,14 +252,13 @@ Lynis security scan details:
 \begin{frame}[t]
 \begin{block}{Bastille}
   \begin{itemize}
-    \item Bastille est un vieil outil de durcissement de configuration,
+    \item Vieil outil de durcissement de configuration,
       également capable de faire de l'audit et du reporting
     \item Basé sur une interface interactive pour le durcissement des
       configurations, il permet à un administrateur peu habitué à la
       sécurisation d'un OS UNIX ou GNU/Linux d'appliquer les bonnes pratiques
       de base
-    \item Bien que toujours supporté, Bastille est aujourd'hui en perte de
-      vitesse face à des outils comme Lynis ou OpenSCAP pour l'audit et la
+    \item En perte de vitesse face à des outils comme Lynis ou OpenSCAP pour l'audit et la
       remédiation
   \end{itemize}
 \end{block}
@@ -264,14 +271,13 @@ Lynis security scan details:
   \only<1>{
   \begin{block}{lynis}
   \begin{itemize}
-    \item Lynis est un outil en ligne de commandes bien abouti, permettant
-      d'étudier l'état des configuration et des versions des logiciels du
+    \item Est un outil en ligne de commandes bien abouti
+    \item permet d'étudier l'état des configuration et des versions des logiciels du
       système d'exploitation afin de les confronter à une politique de
       sécurité donnée, pouvant être personnalisée
-    \item Le rapport de Lynis est de bonne facture et donne un bon apperçu du
-      niveau de durcissement de l'OS et des manquements présents
-    \item Lynis supporte un grand nombre de tests, ce qui en fait un outil
-      riche et efficace, avec une synthèse très convenable
+    \item Fournit un rapport de bonne facture et donne un bon apperçu du
+      niveau de durcissement de l'OS
+    \item Supporte un grand nombre de tests, avec une synthèse très convenable
   \end{itemize}
   \end{block}
   }
@@ -286,47 +292,36 @@ Lynis security scan details:
 \begin{frame}[t]
 
   \only<1>{
-  \begin{block}{Un écosystème désordonné}
+  \begin{block}{Un écosystème désordonné...}
   \begin{itemize}
-    \item Bien que les outils de patch management et de suivi de la sécurité
-      d'un équipement existent, l'écosystème de gestion de la sécurité est
-      longtemps resté siloté entre chaque industriel (Microsoft, IBM, etc.),
-      sans véritable définition de standards unifiés permettant de gérer de
-      manière homogène un système d'information
+    \item L'écosystème de gestion de la sécurité est
+      longtemps resté siloté entre chaque industriel (Microsoft, Cisco, etc.)
+    \item Chacun fournissait sa propre suite, propriétaire
     \item Les outils de validation des politiques de sécurité ont également
-      longtemps implémenté leurs propres implémentations pour valider les
-      politiques standard, comme le PCI-DSS ou les exigences NIST. Ces
-      implémentations, incluant souvent une validation aurpès de l'ogranisme
-      éditeur de la politique, étant vue (à juste titre) comme une valeur
-      ajoutée du logiciel, imposant de fait aux industriel une fidélité à un
-      éditeur pour simplifier la gestion de la sécurité de leur parc
+      longtemps implémenté leurs propres technologies pour valider les
+      politiques standards, comme le PCI-DSS ou les exigences NIST
   \end{itemize}
   \end{block}
-  }
-  \only<2>{
-  \begin{block}{Un écosystème désordonné}
+  \begin{block}{...source de problèmes}
     \begin{itemize}
-      \item L'existance de structures verticales multiples (en générale par
-        vendeur) et incompatibles entre elles rend le gestion de la sécurité
-        d'un parc quasiment impossible à valider efficacement, à la fois
-        en terme de coût et en terme de garantie
+      \item Les structures verticales multiples ont rendu le gestion de la sécurité
+        d'un parc difficle à valider efficacement
       \item L'indépendances des échelles, des outils et des protocoles
         implique une mise en place difficile du plan de gestion de la
         sécurité, et un surcoût évident au niveau du SoC (Security Operation
-        Center) du système d'information, écartant de fait ce service des
-        petits acteurs
+        Center) du système d'information
     \end{itemize}
   \end{block}
   }
 
-  \only<3>{
+  \only<2>{
   \begin{block}{Comment corriger le tir ?}
   \begin{itemize}
-    \item Séparer l'implémentation des sondes du formalisme des tests,
-      permettant d'enrichir chaque partie aisément
-    \item Formaliser l'identification des éqiupements logiciels, matériels
+    \item Formaliser l'identification des équipements logiciels, matériels
     \item Formaliser une vulnérabilité et son écosystème (risque, complexité,
       cible, etc.)
+    \item Séparer l'implémentation des sondes du formalisme des tests,
+      permettant d'enrichir chaque partie aisément
     \item Définir un ensemble de langages pour définir, sans prendre
       d'hypothèse sur le logiciel ou matériel cible:
       \begin{itemize}
@@ -371,22 +366,23 @@ Lynis security scan details:
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame 9/10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[t]
-  \begin{itemize}
-    \item La création de SCAP débute au début des années 2000, sur
-      une demande du DoD pour unifier les mécanismes de gestion de la
-      sécurité des systèmes d'information autour d'un ensemble de standards
     \only<1>{
-    \item Le but est de casser les technologies en silos de suivi de la
-      sécurité pour mettre en application une solution transverse, applicable
-      à l'ensemble d'un système d'information, allant des appliances réseau
-      aux postes de travail, en passant par les serveurs et les équipements
-      embarqués
-    \item La création du standard est poussée par le DoD, la NSA, le DoHS
-      et le DISA (Agence pour les systèmes d'informations de Défense). le
-      standard est porté par le NIST (National Institute for Standard \&
+  \begin{block}{La création du standard}
+  \begin{itemize}
+    \item débute au début des années 2000, sur une demande du DoD
+    \item le but est d'unifier les mécanismes de gestion de la
+      sécurité des systèmes d'information autour d'un ensemble de standards
+    \item doit permettre de s'appliquer à l'ensemble du SI (postes de travail,
+      serveurs, appliances, équipements divers)
+    \item Est finalement poussée par le DoD, la NSA, le DoHS
+      et le DISA (Agence pour les systèmes d'informations de Défense)
+    \item le standard est porté par le NIST (National Institute for Standard \&
       Technology)
-    }
+  \end{itemize}
+  \end{block}
+  }
     \only<2>{
+    \begin{itemize}
     \item Le NIST définit alors un ensemble de standard:
       \begin{itemize}
         \item Les {\it CVE} (Common Vulnerability Exposure), formalisant une
@@ -404,15 +400,17 @@ Lynis security scan details:
         \item {\it OVAL} (Open Vulnerability and Assessment Language), formalisme
           XML définissant une fiche de test
       \end{itemize}
+    \end{itemize}
     }
     \only<3>{
+    \begin{itemize}
       \item Les premières présentations (publiques !) de SCAP datent de 2008
       \item La version 1.0 finalisée du standard, publiée par le NIST,
         date du 27 juillet 2010
       \item Les formalismes XCCDF, OVAL possèdent leur propre cycle de vie.
         Oval en est à la version 5.11, XCCDF à la version 1.2
+    \end{itemize}
     }
-  \end{itemize}
 \end{frame}
 
 \section{SCAP}
@@ -466,11 +464,11 @@ Lynis security scan details:
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame 9/10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[t]
-  \frametitle{Le CVSS}
+\begin{block}{Le CVSS}
   \begin{itemize}
     \item Permet de déterminer le niveau de risque associé à une CVE
-    \item est basé sur une echelle de 1 (très faible) à 10 (très important)
-    \item Le calcul du CVSS est basé sur:
+    \item Est basé sur une echelle de 1 (très faible) à 10 (très important)
+    \item Son calcul est basé sur:
       \begin{itemize}
         \item l'impact de l'exploitation de la vulnérabilité en terme de
           confidentialité, d'intégrité et de disponibilité de la cible
@@ -479,11 +477,14 @@ Lynis security scan details:
         \item Les hypothèses nécessaires à l'attaque (accès local, distant,
           nombre de séquences d'authentification préalables sur la cible) 
       \end{itemize}
-    \item On associe souvent à l'échelle de CVSS l'échelle risque statistique
+  \end{itemize}
+\end{block}
+  \begin{exampleblock}{CVSS par la pratique}
+      On associe souvent à l'échelle de CVSS l'échelle risque statistique
       associé à la vulnérabilité. Elle permet de plus de fournir un tableau
       synthétique du risque moyen par vendeur et/ou composant basé sur
       l'historique des CVE associées à ce dernier
-  \end{itemize}
+  \end{exampleblock}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame 9/10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -513,19 +514,14 @@ Lynis security scan details:
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame 9/10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[t]
-  \frametitle{Les CWE}
+\begin{block}{Les CWE}
   \begin{itemize}
-    \item Le but des CWE et de définir des familles de faiblesses (à
-      différencier d'une vulnérabilité, une faiblesse n'impliquant pas
-      nécessairement une vulnérabilité), pouvant s'appliquer à tout type de
-      cible logicielle ou matérielle.
-    \item L'usage des CWE permet de fournir un indiquateur de qualimétrie de
-      sécurité de la cible selon l'état des CWE associé et selon les
-      faiblesses détectées
-    \item Les CWE sont organisée sous forme d'une structure hiérarchique de
-      faiblesses
-    \item Il existe des centaines de CWE, classées et numérotées, comme par
-      e.g.:
+    \item Définit des familles de faiblesses (à différencier d'une vulnérabilité,
+     une faiblesse n'impliquant pas nécessairement une vulnérabilité)
+    \item Permet de fournir un indiquateur de qualimétrie de
+      sécurité de la cible
+    \item Sont organisée sous forme d'une structure hiérarchique de faiblesses
+    \item Sont très nombreuses (il existe des centaines de CWE, classées et numérotées)
       \begin{itemize}
         \item CWE 20: Improper Input Validation. Typiquement une validation
           incorrecte d'un flux d'entrée non maîtrisée.
@@ -533,22 +529,19 @@ Lynis security scan details:
           faiblesse liée à la mise à jour logicielle non sécurisée d'une appliance
       \end{itemize}
     \item A chaque identitfant de CWE est indiqué l'impact probable d'une CVE
-      basée sur celle-ci, l'effet probable en terme d'accessibilité, confidentialité
-      et disponibilité, et les manières de s'en prémunir
+      basée sur celle-ci et les manières de s'en prémunir
   \end{itemize}
+  \end{block}
 \end{frame}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame 9/10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[t]
-  \frametitle{Les CPE}
+  \begin{block}{Les CPE}
   \begin{itemize}
-    \item Qui dit formalisation généralisée à l'ensemble des équipements et
-      vendeurs dit définition d'un formalisme pour identifier de manière
-      unique une plateforme. C'est le rôle du dictionnaire CPE
-    \item le format CPE (v2.3) définit une structure de donnée hiérarchique,
-      séparée par des ':'.
-      Voici sa osyntaxe:
+    \item Formalisme pour identifier de manière unique une plateforme
+    \item Définit (v2.3) une structure de donnée hiérarchique,
+      séparée par des ':'
       \begin{itemize}
         \only<1>{
           \item cpe : chaine fixe
@@ -574,9 +567,9 @@ Lynis security scan details:
             \colorbox{Cyan}{cpe:2.3:h:cisco:12000\_router:-:*:*:*:*:*:*:*}
           }
       \end{itemize}
-    \item Il est possible de rédiger ses propres fiches CPE, au format OVAL,
-      sans déclarer son produit auprès du MITRE.
+    \item Peut être enrichit localement, au format OVAL, sans déclarer son produit auprès du MITRE
   \end{itemize}
+  \end{block}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame 9/10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -602,7 +595,7 @@ Lynis security scan details:
       \item Permet de rédiger des checklists (typiquement pour auditer un
         équipement par rapport à une politique de sécurité)
       \item Génère dans le même temps le guide de sécurité associé
-      \item est un formalisme XML
+      \item Est un formalisme XML
       \item Associe un ensemble de fiches OVAL à une politique de sécurité,
         assurant ainsi une traçabilité des tests
     \end{itemize}
@@ -610,11 +603,11 @@ Lynis security scan details:
 
   \begin{block}{XCCDF est riche et complexe}
     \begin{itemize}
-      \item Il possède des mécanismes de contrôle intégrés (macros if)
+      \item Possède des mécanismes de contrôle intégrés (macros if)
       \item Permet d'intégrer des mécanismes d'interactivité via le formalisme
          OCIL (Open Checklist Interactive Language)
-       \item Il supporte la gestion de variables pouvant être rafinées selon
-         les profils associé au guide de sécurité
+       \item Supporte la gestion de variables pouvant être rafinées selon
+         les profils associés au guide de sécurité
     \end{itemize}
   \end{block}
 \end{frame}
@@ -723,7 +716,7 @@ Lynis security scan details:
   \begin{itemize}
     \item Toutes les distributions et applicatifs ne sont pas supportés de manière égale
     \item Un gros effort est en cours sur le support des scripts de remédiation
-    \item La complétudes des STIGs n'est pas toujours complète
+    \item Le support des STIGs n'est pas toujours complet
   \end{itemize}
 \end{alertblock}
 }
@@ -817,10 +810,10 @@ ID | Timestamp           | Status
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame 9/10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[t]
-  \begin{block}{Formalisme de base}
+  \begin{block}{Formalisme OVAL}
     \begin{itemize}
-      \item Une fiche OVAL est une définition, à laquelle on associe un ou plusieurs tests
-      \item Une définition peut être de type:
+      \item Est une définition, à laquelle on associe un ou plusieurs tests
+      \item Peut être de type:
 	      \begin{itemize}
 		      \item compliance (conformité à une exigence)
 		      \item inventory (détection d'un composant - au sens du standard CPE)
@@ -828,12 +821,12 @@ ID | Timestamp           | Status
 		      \item vulnerability (détection d'une vulnérabilité)
 		      \item miscellaneous (tout le reste)
 	      \end{itemize}
-      \item une fiche OVAL possède un identifiant unique (dénoté {\it id}), une description, un titre et une ou plusieurs cible(s)
+      \item Possède un identifiant unique (dénoté {\it id}), une description, un titre et une ou plusieurs cible(s)
     \end{itemize}
   \end{block}
   \begin{block}{Critères de validation de la fiche}
     \begin{itemize}
-      \item Une fiche OVAL est vraie lorsque :
+      \item Une fiche est vraie lorsque :
 	      \begin{itemize}
 		      \item la cible correspond à celle définie dans la fiche OVAL
 		      \item l'ensemble des critères nécessaires et suffisants à sa validation ont été joués avec un résultat positif
@@ -846,17 +839,19 @@ ID | Timestamp           | Status
 \begin{frame}[t]
   \begin{block}{Les critères OVAL}
     \begin{itemize}
-      \item Les critères utilisent une logique booléenne récursive
-      \item On peut utiliser la mécanique booléenne pour construire des fiches complexes
+      \item Utilisent une logique booléenne récursive
+      \item Permet via une mécanique booléenne de construire des fiches complexes
 	      \begin{itemize}
 		      \item Appliquant des tests différents selon la plateforme cible
 		      \item Se comportant différement selon l'architecture matérielle
 		      \item etc.
 	      \end{itemize}
-      \item Les critères permettent de hiérarchiser les fiches, une fiche pouvant enrichir (et donc dépendre) d'une autre
-      \item Le sur-usage de la logique booléenne des critères peut cependant rendre la fiche illisible
+      \item Permettent de hiérarchiser les fiches, une fiche pouvant enrichir (et donc dépendre) d'une autre
     \end{itemize}
   \end{block}
+  \begin{alertblock}{Attention à la complexité}
+    Le sur-usage de la logique booléenne des critères peut cependant rendre la fiche illisible
+  \end{alertblock}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame 9/10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1008,15 +1003,15 @@ ID | Timestamp           | Status
 	\only<1>{
 	\begin{block}{Principe d'une checklist XCCDF}
 		\begin{itemize}
-			\item Une checklist XCCDF permet de générer autant de STIGs que de profils définit dans la checklist
-			\item une checklist au format XCCDF permet de valider la conformité d'une cible à un STIG donné
+			\item Permet de générer autant de STIGs que de profils définit dans la checklist
+			\item Permet de valider la conformité d'une cible à un STIG donné
 		\end{itemize}
 	\end{block}
 	}
 	\only<2>{
 	\begin{block}{une checklist XCCDF}
 		\begin{itemize}
-			\item A pour but de générer des STIGs et les checklist associées
+			\item Génère les STIGs et les checklist associées
 			\item Inclut autant de profils que nécessaire, à partir du moment où l'ensemble des fiches et règles XCCDF les définissant sont présents
 			\item Est composée de groupes, structurant les guides
 			\item Chaque groupe contient une ou plusieurs règles
@@ -1036,7 +1031,6 @@ ID | Timestamp           | Status
 \end{frame}
 
 \subsection{Les profils et les politiques de sécurité}
-
 
 \defverbatim[colored]\lstxccdf{
 \begin{lstlisting}[language=xml]
@@ -1083,7 +1077,7 @@ Rule rationale explanation.
 \begin{frame}[t]
 	\begin{block}{Définition d'un profil}
 		Un profil correspond à la formalisation XCCDF d'un STIG.\\
-		Elle correspond à:
+		Il correspond à:
 		\begin{itemize}
 			\item une suite de règles XCCDF
 			\item un ensemble de sélecteurs, nécessaires pour spécialiser les règles\\
@@ -1193,9 +1187,36 @@ Rule rationale explanation.
       (\url{https://cve.mitre.org/docs/docs-2005/transformational_standards.html})}
     \end{figure}
   \end{center}
-
 \end{frame}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Frame 9/10 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}[t]
+  \frametitle{Conclusion}
+    \begin{block}{Conclusion}
+    \begin{itemize}
+      \item SCAP est un écosystème riche est complexe. Il définit à la fois
+      \begin{itemize}
+        \item Des langages (OVAL, XCCDF...)
+        \item Des dictionnaires (CVE, CWE, CPE, etc.)
+        \item Des workflows
+      \end{itemize}
+    \end{itemize}
+    \end{block}
+    \begin{exampleblock}{Les plus}
+      \begin{itemize}
+        \item Il casse les silots liés aux solutions propriétaires
+        \item Il permet d'unifier la gestion de la sécurité des SI
+          en y associant tous les acteurs (industriels, éditeurs)
+        \item Il fournit un standard ouvert (pas de brevets)
+      \end{itemize}
+    \end{exampleblock}
+    \begin{alertblock}{Les moins}
+      \begin{itemize}
+         \item Il ne résout pas toujours en soi l'applicabilité des PSSI (gestions des images des conteneurs, etc.)
+         \item Les différentes implémentations du standard ne sont pas toujours compatibles
+      \end{itemize}
+    \end{alertblock}
+\end{frame}
 
 
 \beginbackup
