updated last slide.

--- a/presentation.tex
+++ b/presentation.tex
@@ -1177,6 +1177,15 @@ Rule rationale explanation.
 	\begin{itemize}
 		\item Les fiches OVAL définissant un patch ou une vulnérabilité sont souvent à la charge de l'éditeur
         \item Elles sont souvent générées automatiquement en même temps que la CVE, ou à partir d'elle
+		\item Les fiches XCCDF définissant un ensemble de règles à
+                  respecter, elles sont sous la responsabilité du RSSI en
+                  entreprise (si celle-ci possède sa propre PSSI) et sous la
+                  responsabilité d'organismes standardisateurs ou fournisseurs
+                  de bonnes pratiques (NIST, ANSSI, etc.)
+                \item la mise en application des fiches XCCDF (période,
+                  méthode, rôles associés) est sous la responsabilité du RSSI
+                  via la PSSI. Il en va de même pour la réponse à un incident
+                  de sécurité (des bonnes pratiques existes cependant)
 	\end{itemize}
 	\end{block}
 }
