--- a/Packages/Preambule.tex
+++ b/Packages/Preambule.tex
@@ -4,7 +4,7 @@
 \title[SCAP]{\large \textsc{SCAP - un ensemble de standards pour la gestion de la sécurité}}
 \author{Philippe Thierry}
 \institute{\includegraphics[width=0.15\linewidth]{cc}}
-\date{Vendredi 2 janvier 2017}
+\date{Lundi 14 janvier 2019}
 %\logo{\includegraphics[width=0.05\paperwidth]{ece_en}}
 
 \graphicspath{{Images/}{Images/title/}{Images/jury/}{Images/logos/}{Images/questions/}{Images/psched/}{Images/spsched/}{Images/intro/}}
